--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lint": "eslint lib/*.js test/*.js index.js example.js example-with-request.js",
     "test": "tape test/*-test.js | tap-spec",
     "prepublish": "nsp check",
-    "coverage": "istanbul cover tape -- test/**/*.js",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
+    "coverage": "nyc npm test",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "ci": "npm run lint && npm run coveralls"
   },
   "files": [
@@ -51,8 +51,8 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-standard": "^3.0.1",
-    "istanbul": "^0.4.5",
     "nsp": "^2.6.3",
+    "nyc": "^11.1.0",
     "proxyquire": "^1.8.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
