--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepublish": "nsp check",
     "coverage": "nyc npm test",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "ci": "npm run lint && npm run coveralls"
+    "ci": "npm run lint && npm run coveralls",
+    "release": "standard-version"
   },
   "files": [
     "package.json",
@@ -54,6 +55,7 @@
     "nsp": "^3.1.0",
     "nyc": "^11.1.0",
     "proxyquire": "^1.8.0",
+    "standard-version": "^4.3.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
   }
