--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - npm install -g npm@5
   - npm install -g greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
+install: npm install
 script:
    - npm run ci
 # Only the node version 8 job will upload the lockfile
