--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
   "bugs": "https://github.com/nodeshift/openshift-config-loader/issues",
   "license": "Apache-2.0",
   "dependencies": {
-    "js-yaml": "^3.8.4"
+    "js-yaml": "~3.12.1"
   },
   "devDependencies": {
-    "coveralls": "^3.0.0",
+    "coveralls": "~3.0.2",
     "nyc": "^12.0.2",
-    "proxyquire": "^2.0.0",
-    "standard-version": "^4.3.0",
+    "proxyquire": "~2.1.0",
+    "standard-version": "~4.4.0",
     "tap-spec": "^5.0.0",
-    "tape": "^4.6.3",
-    "xo": "~0.22.0"
+    "tape": "~4.9.2",
+    "xo": "~0.23.0"
   }
 }
